APP LINK WORKING

--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,4 +1,4 @@
-<ion-view life-cycle view-title="Chats">
+<ion-view life-cycle view-title="Chats" cache-view="false">
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
